[gd_scene load_steps=9 format=2]

[ext_resource path="res://resources/sprites/buttons/fudgedicepressed (2).png" type="Texture" id=1]
[ext_resource path="res://resources/theme.tres" type="Theme" id=2]
[ext_resource path="res://scenes/tools/RollTool.gd" type="Script" id=3]
[ext_resource path="res://resources/sprites/backgrounds/9patch_paper_small.png" type="Texture" id=4]
[ext_resource path="res://resources/sprites/buttons/fudgedice (2).png" type="Texture" id=5]
[ext_resource path="res://resources/sfx/dicerollingsound.wav" type="AudioStream" id=6]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxLine" id=2]
color = Color( 0.627451, 0.627451, 0.627451, 1 )
grow_begin = -20.0
grow_end = -20.0
vertical = true

[node name="RollTool" type="Control"]
margin_left = 569.0
margin_right = 1369.0
margin_bottom = 80.0
rect_min_size = Vector2( 800, 80 )
theme = ExtResource( 2 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RollToolBG" type="NinePatchRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 800, 0 )
texture = ExtResource( 4 )
patch_margin_left = 34
patch_margin_top = 43
patch_margin_right = 37
patch_margin_bottom = 41
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 16
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AtributeCont" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 17.0
margin_right = 137.0
margin_bottom = 80.0
alignment = 1

[node name="AtributeL" type="Label" parent="HBoxContainer/AtributeCont"]
margin_top = 16.0
margin_right = 120.0
margin_bottom = 38.0
text = "Atributo"
align = 1

[node name="Atribute" type="LineEdit" parent="HBoxContainer/AtributeCont"]
margin_top = 42.0
margin_right = 120.0
margin_bottom = 64.0
rect_min_size = Vector2( 120, 0 )
text = "0"
align = 1
editable = false

[node name="Plus" type="Label" parent="HBoxContainer"]
margin_left = 153.0
margin_top = 29.0
margin_right = 165.0
margin_bottom = 51.0
text = "+"

[node name="AbilityCont" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 181.0
margin_right = 331.0
margin_bottom = 80.0
alignment = 1

[node name="AbilityL" type="Label" parent="HBoxContainer/AbilityCont"]
margin_top = 16.0
margin_right = 150.0
margin_bottom = 38.0
rect_min_size = Vector2( 150, 0 )
text = "Habilidad"
align = 1

[node name="Ability" type="LineEdit" parent="HBoxContainer/AbilityCont"]
margin_top = 42.0
margin_right = 150.0
margin_bottom = 64.0
rect_min_size = Vector2( 120, 0 )
text = "0"
align = 1
editable = false

[node name="Plus2" type="Label" parent="HBoxContainer"]
margin_left = 347.0
margin_top = 29.0
margin_right = 359.0
margin_bottom = 51.0
text = "+"

[node name="Mod" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 375.0
margin_right = 447.0
margin_bottom = 80.0
alignment = 1

[node name="ModL" type="Label" parent="HBoxContainer/Mod"]
margin_top = 16.0
margin_right = 72.0
margin_bottom = 38.0
text = "Mod"
align = 1

[node name="Mod" type="LineEdit" parent="HBoxContainer/Mod"]
margin_top = 42.0
margin_right = 72.0
margin_bottom = 64.0
text = "0"
align = 1
editable = false

[node name="Plus3" type="Label" parent="HBoxContainer"]
margin_left = 463.0
margin_top = 29.0
margin_right = 475.0
margin_bottom = 51.0
text = "+"

[node name="RollButton" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 491.0
margin_right = 570.0
margin_bottom = 80.0
custom_constants/separation = -7
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSeparator" type="HSeparator" parent="HBoxContainer/RollButton"]
margin_top = 7.0
margin_right = 79.0
margin_bottom = 17.0
custom_styles/separator = SubResource( 1 )
custom_constants/separation = 10

[node name="Roll" type="TextureButton" parent="HBoxContainer/RollButton"]
margin_left = 19.0
margin_top = 10.0
margin_right = 59.0
margin_bottom = 50.0
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 1 )
stretch_mode = 5

[node name="Public" type="CheckBox" parent="HBoxContainer/RollButton"]
margin_top = 43.0
margin_right = 79.0
margin_bottom = 73.0
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover_pressed = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
pressed = true
text = "Public"
align = 1

[node name="VSeparator" type="VSeparator" parent="HBoxContainer"]
margin_left = 586.0
margin_right = 596.0
margin_bottom = 80.0
custom_styles/separator = SubResource( 2 )
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResultCont" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 612.0
margin_right = 782.0
margin_bottom = 80.0
alignment = 1

[node name="ResultL" type="Label" parent="HBoxContainer/ResultCont"]
margin_top = 16.0
margin_right = 170.0
margin_bottom = 38.0
text = "Resultado"
align = 1

[node name="Result" type="LineEdit" parent="HBoxContainer/ResultCont"]
margin_top = 42.0
margin_right = 170.0
margin_bottom = 64.0
rect_min_size = Vector2( 170, 0 )
editable = false

[node name="Webhook" type="HTTPRequest" parent="."]

[node name="SFXRoll" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
[connection signal="pressed" from="HBoxContainer/RollButton/Roll" to="." method="_on_Roll_pressed"]
